--- a/RestockList/Base.lproj/Main.storyboard
+++ b/RestockList/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
                                                     <color key="tintColor" name="AccentColor"/>
                                                 </progressView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rhl-ZN-zop">
-                                                    <rect key="frame" x="40" y="15" width="37" height="17"/>
+                                                    <rect key="frame" x="40" y="15" width="304" height="17"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <color key="textColor" name="FontColor"/>
                                                     <nil key="highlightedColor"/>
@@ -96,6 +96,7 @@
                                                 <constraint firstItem="YuL-EP-SLh" firstAttribute="top" secondItem="eqf-R9-T7z" secondAttribute="top" constant="10" id="B4z-7j-WYP"/>
                                                 <constraint firstAttribute="trailing" secondItem="YuL-EP-SLh" secondAttribute="trailing" constant="10" id="BfN-H0-Ajq"/>
                                                 <constraint firstAttribute="bottom" secondItem="wy3-Ta-eQZ" secondAttribute="bottom" constant="10" id="DoQ-vk-eob"/>
+                                                <constraint firstItem="YuL-EP-SLh" firstAttribute="leading" secondItem="Rhl-ZN-zop" secondAttribute="trailing" constant="10" id="Ici-zu-paQ"/>
                                                 <constraint firstAttribute="trailing" secondItem="wy3-Ta-eQZ" secondAttribute="trailing" constant="10" id="LXc-1M-caB"/>
                                                 <constraint firstAttribute="bottom" secondItem="nKs-21-GJP" secondAttribute="bottom" constant="10" id="Mod-K2-vS4"/>
                                                 <constraint firstAttribute="height" constant="130" id="Sjn-jW-ORc"/>
@@ -159,6 +160,8 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="aGo-cy-M9e">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -179,18 +182,11 @@
                             <textAttributes key="titleTextAttributes">
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </textAttributes>
-                            <barButtonItemAppearance key="backButtonAppearance">
-                                <barButtonItemStateAppearance key="normal" backgroundImage="arrow.backward" catalog="system">
-                                    <textAttributes key="titleTextAttributes">
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </textAttributes>
-                                </barButtonItemStateAppearance>
-                                <barButtonItemStateAppearance key="highlighted"/>
-                                <barButtonItemStateAppearance key="disabled"/>
-                                <barButtonItemStateAppearance key="focused"/>
-                            </barButtonItemAppearance>
                         </navigationBarAppearance>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Q2I-ES-ddX">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="mnu-J1-1eu" kind="relationship" relationship="rootViewController" id="mmQ-uh-8E3"/>
                     </connections>
@@ -201,7 +197,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow.backward" catalog="system" width="128" height="98"/>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
         <image name="ellipsis.circle" catalog="system" width="128" height="121"/>
         <image name="line.3.horizontal" catalog="system" width="128" height="64"/>
